# shotwright

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README-cn.md  README.md  keepalive.ps1  package-lock.json  package.json  setup-versions.yml  setup.md  shotwright-config.json  tmp-playwright-shot.js  tsconfig.json
scripts/: after_effects_host.py  create_validation_animation_project.jsx  modify_setup_win.py  (+9 more)
src/backend/: pyproject.toml  requirements-aigc.txt
src/backend/app/: _session_repair_tmp.py  config.py  database.py  main.py
src/backend/app/middleware/: auth.py
src/backend/app/models/: admin.py  agent.py  chat.py  container.py  media.py  project.py  session.py
src/backend/app/routers/: admin.py  agent.py  containers.py  projects.py  sessions.py  streaming.py
src/backend/app/services/: agent_model_metadata.py  agent_runtime.py  agent_tools.py  codex_bridge.py  codex_config.py  codex_runtime.py  codex_tool_runner.py  container_manager.py  copilot_runtime.py  github_token_env.py  image_attachments.py  nexrender.py  project_manager.py  reference_media.py  session_streams.py  session_titles.py  tts.py  video_streaming.py
src/backend/codex-bridge/: bridge.mjs  package-lock.json  package.json
src/backend/tests/: test_after_effects_host_helper.py  test_agent_runtime.py  test_agent_tools.py  test_codex_bridge.py  test_codex_config.py  test_codex_runtime.py  test_codex_tool_runner.py  test_copilot_runtime.py  test_nexrender_helpers.py  test_project_manager.py  test_reference_media.py  test_session_titles.py  test_skills_bundle.py  test_tts.py
(+84 files in other folders)
