[project]
name = "shotwright-api"
version = "0.1.0"
description = "Shotwright backend API — Copilot agent runtime for After Effects"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "motor>=3.7,<4",
    "pydantic-settings>=2.8,<3",
    "python-multipart>=0.0.20,<1",
    "docker>=7,<8",
    "httpx>=0.28,<1",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",
    "aiofiles>=24,<25",
    "github-copilot-sdk>=0.2.2,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "httpx>=0.28,<1",
    "psutil>=7,<8",
    "ruff>=0.11,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
